--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,30 +1,35 @@
+{% set name = "peakutils" %}
 {% set version = "1.3.4" %}
 
 package:
-  name: peakutils
+  name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/P/PeakUtils/PeakUtils-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/PeakUtils-{{ version }}.tar.gz
   sha256: 8920426a39424ea9f025cd76a0c19150107143670bea47e4935d4435f65e6370
 
 build:
-  number: 0
   noarch: python
-  script: {{ PYTHON }} -m pip install . --no-deps -vv
+  script: {{ PYTHON }} -m pip install . -vv
+  number: 0
 
 requirements:
   host:
-    - python
     - pip
+    - python >=3.6
   run:
-    - python
-    - numpy >=1.8
-    - scipy >=0.14
+    - numpy
+    - python >=3.6
+    - scipy
 
 test:
   imports:
     - peakutils
+  commands:
+    - pip check
+  requires:
+    - pip
 
 about:
   home: https://bitbucket.org/lucashnegri/peakutils
